2003-12-19  MenTaLguY <mental@rydia.net>

	* SPActions now know their desktop, and toolbar buttons get it assigned correctly -- still need to see about the menus, however

2003-12-18  Jon A. Cruz <jon@joncruz.org>

	* fix for 859133; Reduced number of generated events.

2003-12-18  Jon A. Cruz <jon@joncruz.org>

	* src/widgets/sp-color-gtkselector.cpp: fix for 859131; Changed descriptive name of GTK+
	selector.

2003-12-18  MenTaLguY <mental@rydia.net>

	* First steps towards making actions per-view

2003-12-17  Jon A. Cruz <jon@joncruz.org>

	* src/widgets/sp-color-notebook.cpp: fix for 859128; changed selectors to grow when
	given more space.

2003-12-17  Jon A. Cruz <jon@joncruz.org>

	* Converted color selectors to C++ classes.

2003-12-18  Nathan Hurst <njh@csse.monash.edu.au>

	* Merged NRPointF and D, similarly Matrix and Rect.

2003-12-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/toolbox.cpp: re-added spiral button (reverting MenTaLguY's change).

2003-12-17  bulia byak <bulia@dr.com>

	* src/xml/repr-io.cpp src/xml/repr.h: fix to suppress formatting whitespace when
	serializing text and its children

	* src/select-context.cpp: shift now prevents dragging objects, creating rubberband
	instead

2003-12-17 Nathan Hurst <njh@csse.monash.edu.au>

	* provided some initial thoughts on how to do Points uniformly across inkscape.  geom.h
	* partial currying of zoom menu
	
2003-12-17  MenTaLguY <mental@rydia.net>

	* src/toolbox.cpp: removed spiral button

2003-12-16  bulia byak <bulia@dr.com>

	* src/nodepath.cpp src/nodepath.h: node drag is now restricted to hor/vert by ctrl

2003-12-16  bulia byak <bulia@dr.com>

	* src/seltrans.cpp: fix for 860201; ctrl restricts rotation by 15 degrees (from
	sodipodi); used new status display function

	* src/sp-text.cpp: removed non-printable char error into text-context, removed
	extraneous assignment

	* src/verbs.cpp: typo fix
